-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
Qt Creator 4.13.1
-
None
-
-
314605
Unable to select, drag and drop widgets in designer mode. Widgets are displayed properly (not greyed out), but doesn't allow mouse selection and/or drag/drop. This behavior is same in Qt Quick designer.
System info as below:
Qt 5.15.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 10.0.0 (clang-1000.11.45.5) (Apple)) on "cocoa" OS: macOS 10.15 [darwin version 19.6.0] Architecture: x86_64; features: SSE2 SSE3 SSSE3 SSE4.1 SSE4.2 AVX AVX2 Environment: Features: QT_NO_EXCEPTIONS QT_NO_OPENSSL Library info: PrefixPath: /Users/ali/Qt/Qt Creator.app/Contents DocumentationPath: /Users/ali/Qt/Qt Creator.app/Contents/doc HeadersPath: /Users/ali/Qt/Qt Creator.app/Contents/include LibrariesPath: /Users/ali/Qt/Qt Creator.app/Contents/lib LibraryExecutablesPath: /Users/ali/Qt/Qt Creator.app/Contents/libexec BinariesPath: /Users/ali/Qt/Qt Creator.app/Contents/MacOS PluginsPath: /Users/ali/Qt/Qt Creator.app/Contents/PlugIns ImportsPath: /Users/ali/Qt/Qt Creator.app/Contents/Imports/qtquick1 Qml2ImportsPath: /Users/ali/Qt/Qt Creator.app/Contents/Imports/qtquick2 ArchDataPath: /Users/ali/Qt/Qt Creator.app/Contents DataPath: /Users/ali/Qt/Qt Creator.app/Contents TranslationsPath: /Users/ali/Qt/Qt Creator.app/Contents/translations ExamplesPath: /Users/ali/Qt/Qt Creator.app/Contents/examples TestsPath: /Users/ali/Qt/Qt Creator.app/Contents/tests SettingsPath: /Users/ali/Qt/Qt Creator.app/Contents Standard paths [*...* denote writable entry]: DesktopLocation: "Desktop" */Users/ali/Desktop* DocumentsLocation: "Documents" */Users/ali/Documents* FontsLocation: "Fonts" */Users/ali/Library/Fonts* /Library/Fonts /System/Library/Fonts ApplicationsLocation: "Applications" */Users/ali/Applications* /Applications MusicLocation: "Music" */Users/ali/Music* MoviesLocation: "Movies" */Users/ali/Movies* PicturesLocation: "Pictures" */Users/ali/Pictures* TempLocation: "Temporary Items" */private/var/folders/jl/d6mjvkmj0jvf6vqtwhrq_7vm0000gn/T* HomeLocation: "Home" */Users/ali* AppLocalDataLocation: "Application Support" */Users/ali/Library/Application Support/QtProject/qtdiag* /Library/Application Support/QtProject/qtdiag /Users/ali/Qt/Qt Creator.app/Contents/Resources CacheLocation: "Caches" */Users/ali/Library/Caches/QtProject/qtdiag* /Library/Caches/QtProject/qtdiag GenericDataLocation: "Application Support" */Users/ali/Library/Application Support* /Library/Application Support RuntimeLocation: "Application Support" */Users/ali/Library/Application Support* ConfigLocation: "Preferences" */Users/ali/Library/Preferences* DownloadLocation: "Downloads" */Users/ali/Downloads* GenericCacheLocation: "Caches" */Users/ali/Library/Caches* /Library/Caches /System/Library/Caches GenericConfigLocation: "Preferences" */Users/ali/Library/Preferences* AppDataLocation: "Application Support" */Users/ali/Library/Application Support/QtProject/qtdiag* /Library/Application Support/QtProject/qtdiag /Users/ali/Qt/Qt Creator.app/Contents/Resources AppConfigLocation: "Preferences" */Users/ali/Library/Preferences/QtProject/qtdiag* File selectors (increasing order of precedence): en_US unix darwin mac osx macos Network: Using "Secure Transport, macOS 10.15", version: 0x0 Platform capabilities: ThreadedPixmaps OpenGL BufferQueueingOpenGL WindowMasks MultipleWindows ApplicationState ForeignWindows NonFullScreenWindows NativeWidgets WindowManagement RasterGLSurface ApplicationIcon Style hints: mouseDoubleClickInterval: 400 mousePressAndHoldInterval: 800 startDragDistance: 10 startDragTime: 500 startDragVelocity: 0 keyboardInputInterval: 400 keyboardAutoRepeatRate: 30 cursorFlashTime: 1000 showIsFullScreen: 0 showIsMaximized: 0 passwordMaskDelay: 0 passwordMaskCharacter: U+2022 fontSmoothingGamma: 2 useRtlExtensions: 0 setFocusOnTouchRelease: 0 tabFocusBehavior: Qt::TabFocusBehavior(3) singleClickActivation: 0 Additional style hints (QPlatformIntegration): ReplayMousePressOutsidePopup: 1 Theme: Platforms requested : cocoa available : Styles requested : macintosh available : macintosh,Windows,Fusion System font : ".AppleSystemUIFont" 13 Native file dialog Native color dialog Native font dialog Fonts: General font : ".AppleSystemUIFont" 13 Fixed font : ".SF NS Mono" 10 Title font : ".AppleSystemUIFont" 13 Smallest font: ".AppleSystemUIFont" 9 Palette: QPalette::WindowText: #d8ffffff QPalette::Button: #ff323232 QPalette::Light: #ff373737 QPalette::Midlight: #ff343434 QPalette::Dark: #ffbfbfbf QPalette::Mid: #ff242424 QPalette::Text: #d8ffffff QPalette::BrightText: #ff373737 QPalette::ButtonText: #ff000000 QPalette::Base: #ff1e1e1e QPalette::Window: #ff323232 QPalette::Shadow: #ff000000 QPalette::Highlight: #ff3f638b QPalette::HighlightedText: #d8ffffff QPalette::Link: #ff419cff QPalette::LinkVisited: #ffff00ff QPalette::AlternateBase: #ff989898 QPalette::NoRole: #ff000000 QPalette::ToolTipBase: #3fffffff QPalette::ToolTipText: #ff000000 QPalette::PlaceholderText: #80ffffff Screens: 1, High DPI scaling: inactive # 0 "Color LCD" Depth: 24 Primary: yes Manufacturer: Model: Serial number: Geometry: 1680x1050+0+0 Available: 1680x958+0+23 Physical size: 330.791x206.744 mm Refresh: 60 Hz Power state: 0 Physical DPI: 129,129 Logical DPI: 72,72 Subpixel_RGB DevicePixelRatio: 2 Pixel density: 1 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0 LibGL Vendor: Intel Inc. Renderer: Intel(R) UHD Graphics 630 Version: 2.1 INTEL-14.7.8 Shading language: 1.20 Format: Version: 2.1 Profile: 0 Swap behavior: 2 Buffer size (RGB): 8,8,8 Profile: None (QOpenGLFunctions_-453994832_32766) Qt Rendering Hardware Interface supported backends: OpenGL (with default QSurfaceFormat): Min Texture Size: 1 Max Texture Size: 16384 Max Color Attachments: 8 Frames in Flight: 1 Uniform Buffer Alignment: 1 Supported MSAA sample counts: 1,2,4,8,16 Features: - MultisampleTexture v MultisampleRenderBuffer - DebugMarkers - Timestamps - Instancing - CustomInstanceStepRate - PrimitiveRestart v NonDynamicUniformBuffers v NonFourAlignedEffectiveIndexBufferOffset v NPOTTextureRepeat - RedOrAlpha8IsRed v ElementIndexUint - Compute v WideLines v VertexShaderPointSize - BaseVertex - BaseInstance v TriangleFanTopology v ReadBackNonUniformBuffer v ReadBackNonBaseMipLevel Texture formats: RGBA8 BGRA8 R8 R16 RED_OR_ALPHA8 BC1 BC2 BC3 Metal: Min Texture Size: 1 Max Texture Size: 16384 Max Color Attachments: 8 Frames in Flight: 2 Uniform Buffer Alignment: 256 Supported MSAA sample counts: 1,2,4,8 Features: v MultisampleTexture v MultisampleRenderBuffer v DebugMarkers - Timestamps v Instancing v CustomInstanceStepRate v PrimitiveRestart v NonDynamicUniformBuffers - NonFourAlignedEffectiveIndexBufferOffset v NPOTTextureRepeat v RedOrAlpha8IsRed v ElementIndexUint v Compute - WideLines v VertexShaderPointSize v BaseVertex v BaseInstance - TriangleFanTopology v ReadBackNonUniformBuffer v ReadBackNonBaseMipLevel Texture formats: RGBA8 BGRA8 R8 R16 RED_OR_ALPHA8 RGBA16F RGBA32F R16F R32F D16 D32F BC1 BC2 BC3 BC4 BC5 BC6H BC7 Plugin information: + Android 4.13.1 + AutoTest 4.13.1 AutotoolsProjectManager 4.13.1 BareMetal 4.13.1 + Bazaar 4.13.1 Beautifier 4.13.1 + BinEditor 4.13.1 + Bookmarks 4.13.1 Boot2Qt 4.13.1 + CMakeProjectManager 4.13.1 + CVS 4.13.1 + ClangCodeModel 4.13.1 ClangFormat 4.13.1 + ClangTools 4.13.1 + ClassView 4.13.1 ClearCase 4.13.1 + CodePaster 4.13.1 CompilationDatabaseProjectManager 4.13.1 + Core 4.13.1 + CppEditor 4.13.1 + CppTools 4.13.1 Cppcheck 4.13.1 + CtfVisualizer 4.13.1 + Debugger 4.13.1 + Designer 4.13.1 + DiffEditor 4.13.1 EmacsKeys 4.13.1 + FakeVim 4.13.1 + GLSLEditor 4.13.1 + GenericProjectManager 4.13.1 + Git 4.13.1 HelloWorld 4.13.1 + Help 4.13.1 + ImageViewer 4.13.1 IncrediBuild 4.13.1 + Ios 4.13.1 + LanguageClient 4.13.1 + Macros 4.13.1 + Marketplace 4.13.1 McuSupport 4.13.1 + Mercurial 4.13.1 MesonProjectManager 4.13.1 + ModelEditor 4.13.1 Nim 4.13.1 + PerfProfiler 4.13.1 Perforce 4.13.1 + ProjectExplorer 4.13.1 + Python 4.13.1 + QbsProjectManager 4.13.1 + QmakeProjectManager 4.13.1 + QmlDesigner 4.13.1 + QmlJSEditor 4.13.1 + QmlJSTools 4.13.1 + QmlPreview 4.13.1 + QmlProfiler 4.13.1 + QmlProjectManager 4.13.1 + Qnx 4.13.1 + QtSupport 4.13.1 + RemoteLinux 4.13.1 + ResourceEditor 4.13.1 + ScxmlEditor 4.13.1 SerialTerminal 4.13.1 SilverSearcher 4.13.1 StudioWelcome 4.13.1 + Subversion 4.13.1 + TaskList 4.13.1 + TextEditor 4.13.1 Todo 4.13.1 + UpdateInfo 4.13.1 + Valgrind 4.13.1 + VcsBase 4.13.1 + WebAssembly 4.13.1 + Welcome 4.13.1 WinRt 4.13.1 Qt Creator 4.13.1 Based on Qt 5.15.1 (Clang 11.0 (Apple), 64 bit) From revision 1da2c1f766 Built on Sep 16 2020 01:17:23
- is duplicated by
-
QTCREATORBUG-24671 Designer mouse inputs not working
-
- Closed
-
-
QTCREATORBUG-24876 Cannot drag widgets in designer mode.
-
- Closed
-
-
QTBUG-86822 [Reg 5.15.0->5.15.1] Drag & Drop does not work on macOS
-
- Closed
-
-
QTCREATORBUG-24676 Can't drag ui-components to ui layout
-
- Closed
-
- relates to
-
QTBUG-86786 Widgets: drag and drop doesn't work on macOS
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-24665 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 314519,2 | QCocoaDrag::maybeDragMultipleItems - fix erroneous size check | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
| 314605,4 | QCocoaDrag::maybeDragMultipleItems - fix erroneous size check | dev | qt/qtbase | Status: MERGED | +2 | 0 |